--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LucasFelipeTimoteo/recruiting-platform-services.git"
+    "url": "https://github.com/LucasFelipeTimoteo/Smart-Coffee"
   },
   "scripts": {
     "tree": "npx md-file-tree --emoji > tree.md"
@@ -20,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/LucasFelipeTimoteo/recruiting-platform-services/issues"
+    "url": "https://github.com/LucasFelipeTimoteo/Smart-Coffee/issues"
   },
-  "homepage": "https://github.com/LucasFelipeTimoteo/recruiting-platform-services#readme"
+  "homepage": "https://github.com/LucasFelipeTimoteo/Smart-Coffee#README"
 }
